# Red-Teaming-of-gpt-oss-20b

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  kaggle_writeup.md  mkdocs.yml  myteamname.findings.1.json  myteamname.findings.2.json  myteamname.findings.3.json  myteamname.findings.4.json  myteamname.findings.5.json  project.yaml  pyproject.toml  python  reproduction_notebook.ipynb  sitecustomize.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
ci/: README.md
configs/: README.md  coverage-baseline.json  license-allowlist.yml
configs/model_vulnerability_analysis/: community_health.yaml  environments.yaml  eval_awareness.yaml  models.yaml  quality_budget.yaml  risk_alignment.yaml  scoring_rubric.yaml  testing_params.yaml
configs/schemas/: ModerationDecisionCard.json  code_advice_explanation.json  vulnerability_finding.json
docs/: developer-guide.md  index.md
docs/adr/: 0001-architecture.md
docs/diagrams/: README.md
docs/reference/: README.md  api.md  configuration.md
infra/: README.md
infra/docker/: Dockerfile
model_vulnerability_analysis/: README.md  requirements.txt
model_vulnerability_analysis/config/: community_health.yaml  environments.yaml  models.yaml  quality_budget.yaml
model_vulnerability_analysis/reports/: summary.md  vulnerability_findings.json
model_vulnerability_analysis/schemas/: EvaluationReceipt.json  advice_explanation.json  report_data.json  risk_alignment_finding.json  vulnerability_finding.json
model_vulnerability_analysis/src/: main.py
model_vulnerability_analysis/tests/: conftest.py  test_complexity_guard.py  test_eval_awareness.py  test_eval_awareness_hardening.py  test_moderation_guard.py  test_risk_alignment.py
reports/: eval_awareness_snippets.md  full_project_report.yaml  provenance-audit.md
reports/eval_awareness/: eval_awareness_report.json  manifest.json  (+2 more)
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: _common.ps1  _common.sh  _license_gate.py  bootstrap  bootstrap.ps1  build  build.ps1  check  check.ps1  clean  clean.ps1  commitlint  commitlint.ps1  coverage  coverage.ps1  dev  dev.ps1  e2e  e2e.ps1  fmt  fmt.ps1  gen-docs  gen-docs.ps1  license-scan  license-scan.ps1  lint  lint.ps1  migrate  migrate.ps1  package  package.ps1  release  release.ps1  sbom  sbom.ps1  security-scan  security-scan.ps1  test  test.ps1  typecheck  (+3 more)
src/: main.py
tests/: conftest.py
tools/: add_spdx_headers.py  make_manifest.py  verify_bundle.py
(+141 files in other folders)
